test-legacy/tests/packages/udo-args/udo-args-typed-secret-literal.txt
error: argument `value` must be of type `secret` (got `string`)
 --> tests/packages/udo-args/udo-args-typed-secret-literal.tql:6:34
  |
6 | argspkg::typed_positional_secret "const"
  |                                  ^^^^^^^ 
  |
  = usage: argspkg::typed_positional_secret value:secret
  = note: parameters:
            positional:
              name   type    default  description
              value  secret  -        Must be a secret expression
